Rewrite API DSL file
