# gen/grpc/url_shortener/server/types.go
@@ -1,0 +1,30 @@
+// Code generated by goa v3.16.1, DO NOT EDIT.
+//
+// UrlShortener gRPC server types
+//
+// Command:
+// $ goa gen olayml.xyz/gotrim/design
+
+package server
+
+import (
+	url_shortenerpb "olayml.xyz/gotrim/gen/grpc/url_shortener/pb"
+	urlshortener "olayml.xyz/gotrim/gen/url_shortener"
+)
+
+// NewCreateShortURLPayload builds the payload of the "CreateShortUrl" endpoint
+// of the "UrlShortener" service from the gRPC request type.
+func NewCreateShortURLPayload(message *url_shortenerpb.CreateShortURLRequest) *urlshortener.CreateShortURLPayload {
+	v := &urlshortener.CreateShortURLPayload{
+		LongURL: message.LongUrl,
+	}
+	return v
+}
+
+// NewProtoCreateShortURLResponse builds the gRPC response type from the result
+// of the "CreateShortUrl" endpoint of the "UrlShortener" service.
+func NewProtoCreateShortURLResponse(result []byte) *url_shortenerpb.CreateShortURLResponse {
+	message := &url_shortenerpb.CreateShortURLResponse{}
+	message.Field = result
+	return message
+}
