# gen/http/create/server/paths.go
@@ -1,13 +1,0 @@
-// Code generated by goa v3.16.1, DO NOT EDIT.
-//
-// HTTP request path constructors for the create service.
-//
-// Command:
-// $ goa gen olayml.xyz/gotrim/design
-
-package server
-
-// CreateCreatePath returns the URL path to the create service create HTTP endpoint.
-func CreateCreatePath() string {
-	return "/api/v1/shorten"
-}
