# gen/http/url_shortener/server/encode_decode.go
@@ -1,0 +1,53 @@
+// Code generated by goa v3.16.1, DO NOT EDIT.
+//
+// UrlShortener HTTP server encoders and decoders
+//
+// Command:
+// $ goa gen olayml.xyz/gotrim/design
+
+package server
+
+import (
+	"context"
+	"io"
+	"net/http"
+
+	goahttp "goa.design/goa/v3/http"
+	goa "goa.design/goa/v3/pkg"
+)
+
+// EncodeCreateShortURLResponse returns an encoder for responses returned by
+// the UrlShortener CreateShortUrl endpoint.
+func EncodeCreateShortURLResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+	return func(ctx context.Context, w http.ResponseWriter, v any) error {
+		res, _ := v.([]byte)
+		enc := encoder(ctx, w)
+		body := res
+		w.WriteHeader(http.StatusCreated)
+		return enc.Encode(body)
+	}
+}
+
+// DecodeCreateShortURLRequest returns a decoder for requests sent to the
+// UrlShortener CreateShortUrl endpoint.
+func DecodeCreateShortURLRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (any, error) {
+	return func(r *http.Request) (any, error) {
+		var (
+			body struct {
+				// URL to shorten
+				LongURL *string `form:"long_url" json:"long_url" xml:"long_url"`
+			}
+			err error
+		)
+		err = decoder(r).Decode(&body)
+		if err != nil {
+			if err == io.EOF {
+				return nil, goa.MissingPayloadError()
+			}
+			return nil, goa.DecodePayloadError(err.Error())
+		}
+		payload := NewCreateShortURLPayload(body)
+
+		return payload, nil
+	}
+}
