# gen/http/url_shortener/server/types.go
@@ -1,0 +1,26 @@
+// Code generated by goa v3.16.1, DO NOT EDIT.
+//
+// UrlShortener HTTP server types
+//
+// Command:
+// $ goa gen olayml.xyz/gotrim/design
+
+package server
+
+import (
+	urlshortener "olayml.xyz/gotrim/gen/url_shortener"
+)
+
+// NewCreateShortURLPayload builds a UrlShortener service CreateShortUrl
+// endpoint payload.
+func NewCreateShortURLPayload(body struct {
+	// URL to shorten
+	LongURL *string `form:"long_url" json:"long_url" xml:"long_url"`
+}) *urlshortener.CreateShortURLPayload {
+	v := &urlshortener.CreateShortURLPayload{}
+	if body.LongURL != nil {
+		v.LongURL = *body.LongURL
+	}
+
+	return v
+}
