# gen/url_shortener/endpoints.go
@@ -1,0 +1,40 @@
+// Code generated by goa v3.16.1, DO NOT EDIT.
+//
+// UrlShortener endpoints
+//
+// Command:
+// $ goa gen olayml.xyz/gotrim/design
+
+package urlshortener
+
+import (
+	"context"
+
+	goa "goa.design/goa/v3/pkg"
+)
+
+// Endpoints wraps the "UrlShortener" service endpoints.
+type Endpoints struct {
+	CreateShortURL goa.Endpoint
+}
+
+// NewEndpoints wraps the methods of the "UrlShortener" service with endpoints.
+func NewEndpoints(s Service) *Endpoints {
+	return &Endpoints{
+		CreateShortURL: NewCreateShortURLEndpoint(s),
+	}
+}
+
+// Use applies the given middleware to all the "UrlShortener" service endpoints.
+func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
+	e.CreateShortURL = m(e.CreateShortURL)
+}
+
+// NewCreateShortURLEndpoint returns an endpoint function that calls the method
+// "CreateShortUrl" of service "UrlShortener".
+func NewCreateShortURLEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		p := req.(*CreateShortURLPayload)
+		return s.CreateShortURL(ctx, p)
+	}
+}
